--- a/project2.html
+++ b/project2.html
@@ -18,6 +18,7 @@
     				<ul>
     					<li>Subscribe</li>
     					<li>Store Locator</li>
+                        <li>NEW CHANGE</li>
     			</div>
     		</header>
     	</div>
